# coursework

./: CMakeLists.txt  CyclicList.cpp  CyclicList.h  Person.cpp  Person.h  Postgraduate.cpp  Postgraduate.h  README.md  Student.cpp  Student.h  Test.cpp  UserInterface.cpp  UserInterface.h  main.cpp
